--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ footer-link-col: "#404040"
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
 
- navbar-img: "/img/_Q4A3609.jpg"
+# navbar-img: "/img/_Q4A3609.jpg"
 # footer-img: "/img/bgimage.png"
 # page-img: "/img/bgimage.png"
 
