Added escape for apostrophe

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: Tricia's Data Science Blog
+title: Tricia\`s Data Science Blog
 
 # Short description of your site
 description: Machine Learning | Data Science | Data Viz
