--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: Tricia Scully
+title: Tricia's Data Science Blog
 
 # Short description of your site
-description: Machine Learning | Data Science | Data Viz | Blog
+description: Machine Learning, Data Science, Data Viz, Etc.
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
